--- a/style.css
+++ b/style.css
@@ -5,15 +5,35 @@
     text-align: center;
 }
 .body { 
-    display: grid; 
-    grid-template-columns: 1fr 3fr; 
-    grid-gap: 20px; ; 
-    width: 50%; 
+    display: grid;
 } 
 .child { 
     margin: 10px; 
 }
 #today{
     border: 1px solid black;
+    padding: 10px;
+    background-color: rgb(165, 232, 255);
+    color: rgb(0, 0, 0);
+    text-align: center;
+}
+.cards{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+   
+    
+}
+.card{
+    border: 1px solid black;
     padding: 30px;
+    margin: 20px;
+}
+.card p{
+    font-weight: bolder;
+}
+ul{
+    list-style-type: none;
+    text-align: center;
+    padding: 0;
+    
 }
